Fixed HanoiBoard.java with copilot. Realized that some other things were intentionally left out. Better read the comments next time...